--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="vertical">
                     <img class="image-top" src="images/log3.png">
-                    <div class="vertical-title">App Developer (Since 2023)</div>
+                    <div class="vertical-title">App Developer (Since 2024)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amimages/log.jpegectetur adipisicing elit. Minima animi deleniti
                         repellendus sed sit iure. Modi expedita quaerat quibusdam tempore?
@@ -92,7 +92,7 @@
                 </div>
                 <div class="vertical">
                     <img class="image-top" src="images/log5.webp">
-                    <div class="vertical-title">Videographer (Since 2023)</div>
+                    <div class="vertical-title">Videographer (Since 2024)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima animi deleniti repellendus sed
                         sit iure. Modi expedita quaerat quibusdam tempore?
@@ -124,9 +124,9 @@
             </div>
             <div class="footer-fourth">
                 <ul>
-                    <li>------</li>
-                    <li>-----</li>
-                    <li>------</li>
+                    <li>Uttar Pradesh</li>
+                    <li>Kolkata</li>
+                    <li>Maharasthra</li>
                 </ul>
             </div>
         </div>
