--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="vertical-title">Photographer (Since 2021)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima animi deleniti repellendus sed
-                        sit iure. Modi expedita quaerat quibusdam tempore?
+                        sit.
                     </div>
                 </div>
                 <div class="vertical">
@@ -71,7 +71,7 @@
                     <div class="vertical-title">Web Developer (2022-2023)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amimages/log.jpegectetur adipisicing elit. Minima animi deleniti
-                        repellendus sed sit iure. Modi expedita quaerat quibusdam tempore?
+                        repellendus sed sit iure.
                     </div>
                 </div>
                 <div class="vertical">
@@ -79,7 +79,7 @@
                     <div class="vertical-title">App Developer (Since 2024)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amimages/log.jpegectetur adipisicing elit. Minima animi deleniti
-                        repellendus sed sit iure. Modi expedita quaerat quibusdam tempore?
+                        repellendus sed sit iure. Modi quaerat quibusdam tempore?
                     </div>
                 </div>
                 <div class="vertical">
@@ -87,7 +87,7 @@
                     <div class="vertical-title">Aeronautical Engg. (Since 2022)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima animi deleniti repellendus sed
-                        sit iure. Modi expedita quaerat quibusdam tempore?
+                        sit iure.
                     </div>
                 </div>
                 <div class="vertical">
