--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
             <div class="footer-second">
                 <ul>
                     <li>+91 6394678795</li>
-                    <li><a href="https://instagram.com/a21_amit?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D">Instagram</a>
-                    </li>
+                    <li><a href="https://instagram.com/a21_amit?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D">Instagram</a></li>
                     <li>mailfortech21@gmail.com</li>
                 </ul>
             </div>
