--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300;600&family=Tektur:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -32,12 +32,14 @@
 
     <main id="home">
         <section class="firstsection">
-            <div class="leftsection">
-                Hi!
-                <br>Myself <span class="red">Kumar Amit.</span>
-                Founder and CEO of <a href="/">A21</a>
-                <br>and I am a passionate<br>
-                <span id="element"></span>
+            <div class="firstbox">
+                <div class="leftsection">
+                    Hi!
+                    <br>Myself <span class="red">Kumar Amit.</span>
+                    Founder and CEO of <a href="/">A21</a>
+                    <br>and I am a passionate<br>
+                    <span id="element"></span>
+                </div>
                 <div class="button">
                     <button class="btn"><a
                             href="https://drive.google.com/file/d/18tPu0uDk6WqwUz3u0nwZyeVZ_XaU-1ap/view?usp=drive_link"
@@ -63,7 +65,7 @@
                     <div class="vertical-title">Photographer (Since 2021)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima animi deleniti repellendus sed
-                        sit.
+                        sit iure. Modi expedita quaerat quibusdam tempore?
                     </div>
                 </div>
                 <div class="vertical">
@@ -71,7 +73,7 @@
                     <div class="vertical-title">Web Developer (2022-2023)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amimages/log.jpegectetur adipisicing elit. Minima animi deleniti
-                        repellendus sed sit iure.
+                        repellendus sed sit iure. Modi expedita quaerat quibusdam tempore?
                     </div>
                 </div>
                 <div class="vertical">
@@ -79,7 +81,7 @@
                     <div class="vertical-title">App Developer (Since 2024)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amimages/log.jpegectetur adipisicing elit. Minima animi deleniti
-                        repellendus sed sit iure. Modi quaerat quibusdam tempore?
+                        repellendus sed sit iure. Modi expedita quaerat quibusdam tempore?
                     </div>
                 </div>
                 <div class="vertical">
@@ -87,7 +89,7 @@
                     <div class="vertical-title">Aeronautical Engg. (Since 2022)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima animi deleniti repellendus sed
-                        sit iure.
+                        sit iure. Modi expedita quaerat quibusdam tempore?
                     </div>
                 </div>
                 <div class="vertical">
@@ -110,22 +112,23 @@
             <div class="footer-second">
                 <ul>
                     <li>+91 6394678795</li>
-                    <li><a href="https://instagram.com/a21_amit?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D">Instagram</a></li>
+                    <li><a href="https://instagram.com/a21_amit?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D">Instagram</a>
+                    </li>
                     <li>mailfortech21@gmail.com</li>
                 </ul>
             </div>
             <div class="footer-third">
                 <ul>
                     <l<li>Street</li>
-                    <li>Childern</li>
-                    <li>Faces</li>
+                        <li>Childern</li>
+                        <li>Faces</li>
                 </ul>
             </div>
             <div class="footer-fourth">
                 <ul>
-                    <li>Uttar Pradesh</li>
-                    <li>Kolkata</li>
-                    <li>Maharasthra</li>
+                    <li>------</li>
+                    <li>-----</li>
+                    <li>------</li>
                 </ul>
             </div>
         </div>
