--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="vertical">
                     <img class="image-top" src="images/log5.webp">
-                    <div class="vertical-title">Videographer (Since 2024)</div>
+                    <div class="vertical-title">Videographer (202**)</div>
                     <div class="vertical-desc">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima animi deleniti repellendus sed
                         sit iure. Modi expedita quaerat quibusdam tempore?
@@ -126,9 +126,9 @@
             </div>
             <div class="footer-fourth">
                 <ul>
-                    <li>------</li>
-                    <li>-----</li>
-                    <li>------</li>
+                    <li>Uttar Pradesh</li>
+                    <li>Maharashtra</li>
+                    <li>Rajasthan</li>
                 </ul>
             </div>
         </div>
